Rewrite UserControllerTest